# feval

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
feval/: __init__.py  core.py  helpers.py
tests/: test_core.py  test_helpers.py
tests/fixtures/: data.py
