[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feval"
version = "0.0.2"
authors = [
    { name = "Olivier Grognuz", email = "olivier@grognuz.site" },
]
description = "Perform (multivariate) Diebold-Mariano and (multivariate) Giacomini-White equal (conditional) predictive ability tests along with a Model Confidence Set implementation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "scipy", "arch"]

[project.urls]
"Homepage" = "https://github.com/ogrnz/feval"
"Bug Tracker" = "https://github.com/ogrnz/feval/issues"
